--- a/Resource/css/test.css
+++ b/Resource/css/test.css
@@ -2,29 +2,25 @@
     margin: 0;
     padding: 0;
 }
-.list ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    width: 200px;
+ul
+{
+	list-style-type:none;
+	margin:0;
+	padding:0;
 }
-.list a{
-    width: 60px;
-    color: #000000;
-    padding: 8px 16px;
-    text-decoration: none;
-    display: block;
+a:link,a:visited
+{
+	display:block;
+	font-weight:bold;
+	color:#FFFFFF;
+	background-color:#98bf21;
+	width:120px;
+	text-align:center;
+	padding:4px;
+	text-decoration:none;
+	text-transform:uppercase;
 }
-.list a:hover{
-    background-color: #555555;
-    color:white;
-}
-.list a:active,a:hover{
-    background-color: #4caf50;
-}
-.list li{
-    border-right:1px solid #bbbbbb;
-}
-.list li:last-child{
-    border-right: none;
+a:hover,a:active
+{
+	background-color:#7A991A;
 }
