--- a/Resource/css/enterpriseStation.css
+++ b/Resource/css/enterpriseStation.css
@@ -59,13 +59,82 @@ body{
     height: 2500px;
     background-color: palevioletred;
 }
+
+
+
+
+
 .content .content-rockTop{
     background-color: papayawhip;
+    position: relative;
+    width: 1500px;
+    height: 600px;
+    margin: 0 auto;
+    overflow: hidden;
 }
-.content-rockTop img{
-    width: 1200px;
-    height: auto;
+.content .content-rockTop #content-rockTop-imgslist{
+    width: 1500px;
+    height:600px;
 }
+.content .content-rockTop #content-rockTop-imgslist li{
+    width: 1500px;
+    height: 600px;
+}
+.content .content-rockTop #content-rockTop-imgslist li img{
+    width: 1500px;
+    height: 600px;
+    display: block;
+    float: left;
+}
+.content .content-rockTop span{
+    position: absolute;
+    top: 50%;
+    margin-top: -30px;
+    width: 30px;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    font-size: 40px;
+}
+.content .content-rockTop #left {
+    left: 0px;
+  }
+  
+  .content .content-rockTop #right {
+    right: 0px;
+  }
+  
+  .content .content-rockTop ol {
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+  }
+  
+  .content .content-rockTop ol li {
+    width: 20px;
+    height: 20px;
+    background: yellow;
+    font-size: 15px;
+    line-height: 20px;
+    float: left;
+    margin: 0px 3px;
+    text-align: center;
+  }
+  
+.content .content-rockTop ol .active {
+    background: #fff;
+    color: red;
+  }
+
+/* .content-rockTop img{ */
+    /* width: 1200px;
+    height: auto; */
+/* } */
+
+
+
+
+
 .content .content-top{
     min-height:300px;   
     background-color: peru;
