--- a/Resource/css/enterpriseStation.css
+++ b/Resource/css/enterpriseStation.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 body{
     width: 1200px;
@@ -57,21 +58,26 @@ body{
 }
 .content{
     height: 2500px;
-    background-color: palevioletred;
 }
 
-
-
-
-
 .content .content-rockTop{
-    background-color: papayawhip;
+
+    position: relative;
+    width: 1500px;
+    height: 600px;
+    margin: 50px auto;
+    overflow: hidden;
+
+
+
+     background-color: papayawhip;
     position: relative;
     width: 1500px;
     height: 600px;
     margin: 0 auto;
-    overflow: hidden;
-}
+    overflow: hidden; 
+ } 
+
 .content .content-rockTop #content-rockTop-imgslist{
     width: 1500px;
     height:600px;
@@ -124,12 +130,91 @@ body{
 .content .content-rockTop ol .active {
     background: #fff;
     color: red;
-  }
+  } 
 
-/* .content-rockTop img{ */
-    /* width: 1200px;
-    height: auto; */
-/* } */
+ .content-rockTop img{ 
+    width: 1200px;
+    height: auto; 
+ } 
+
+/*
++----------------------------------------------------------------+
+	Slideshow
++----------------------------------------------------------------+
+*/
+
+.slider {
+    margin: 0 -150px;
+    width: 1500px;
+}
+.slider-container {
+	height: 600px;
+	margin: 0 auto 1px;
+	overflow: hidden;
+	position: relative;
+    width: 1500px;
+}
+.slider-container .slider-wrapper {
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width: 5000em; /*Fix for prevent display errors*/
+	-webkit-transition: all 800ms ease;
+	-moz-transition: all 800ms ease;
+	-o-transition: all 800ms ease;
+	transition: all 800ms ease;
+}
+.slider-container .slide {
+	float: left;
+	height: 600px;
+	overflow: hidden;
+	position: relative;
+	width: 1500px;
+}
+.slider-nav {
+	text-align: center;
+	width: 1500px;
+}
+.slider-nav li {
+	display: inline;
+	padding: 3px;
+}
+.slider-nav .bullet {
+	background-color: #59baa8;
+	border-radius: 50%;
+	display: inline-block;
+	text-indent: -9000px;
+	overflow: hidden;
+	height: 16px;
+	width: 16px;
+}
+.slider-nav .active {
+	background-color: #e7433b
+}
+.slider-nav .prev, .slider-nav .next {
+	background: url('Resource/img/sprite.png') no-repeat;
+	display: inline-block;
+	text-indent: -9000px;
+	overflow: hidden;
+	height: 16px;
+	width: 16px;
+}
+.slider-nav .next {
+	background-position: -15px top
+}
+.slider img{
+    width: 1500px;
+    height: 600px;
+    display: block;
+    float: left;
+
+}
+
+
+
+
+
 
 
 
@@ -137,7 +222,6 @@ body{
 
 .content .content-top{
     min-height:300px;   
-    background-color: peru;
 }
 .content .content-top .content-top-title{
     padding-top: 10px;
@@ -154,7 +238,7 @@ body{
     width: 25%;
 }
 .content-main{
-
+    height: 1800px;
 }
 .content-main #content-main-top{
     text-align: center;
@@ -164,7 +248,6 @@ body{
     float: left;
     width: 50%;
     height: 1500px;
-    background-color: blue;
     margin-top: 10px;;
 }
 .content-main .content-main-right{
@@ -172,12 +255,10 @@ body{
     width: 50%;
     height: 1500px;
     margin-top: 10px;
-    background-color:#534131;
 }
 .content-main .content-main-box{
     width: 600px;
     height: 600px;
-    margin-bottom: 10px;
 }
 .content-main .content-main-img img{
     max-width: 600px;
@@ -187,8 +268,7 @@ body{
     position: relative;
 }
 .contente-main-text .contente-main-text-top p{
-    padding:0 50px;
-    padding-top: 5px;
+    padding: 50px;
 }
 .contente-main-text h1{
     text-align: center;
@@ -198,13 +278,13 @@ body{
     top: 0;
 }
 .contente-main-text-buttom{
-    padding-top: 50px;
+    padding:-50px 50px;
     width: 100%;
     position: absolute;
     bottom: 0;
 }
 .contente-main-text-buttom p{
-    padding: 0 50px;
+    padding: 5px 50px;
     padding-top: 5px;
 }
 .contente-main-text-buttom hr{
