--- a/Resource/css/enterpriseStation.css
+++ b/Resource/css/enterpriseStation.css
@@ -57,7 +57,7 @@ body{
     text-decoration:none;
 }
 .content{
-    height: 2500px;
+    height: 3200px;
 }
 
 .content .content-rockTop{
@@ -301,7 +301,114 @@ body{
     margin-top: 10px;
 }
 .content-buttom-news-box{
-    height: 1200px;
+    width: 1200px;
     height: 500px;
     padding: 5px,50px;
+}
+.content-buttom-news-box ul{
+    list-style-type: none;
+}
+.content-buttom-news-box a{
+    text-decoration: none;
+}
+.content-buttom-news-box li{
+    float: right;
+    width: 25%;
+}
+
+.footer {
+    height: 350px;
+    background-color: #bfbfbf;
+}
+
+.footer .fnav {
+    height: 500px;
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.footer .footer_top {
+    width: 1200px;
+    margin: 0 auto;
+    height: 300px;
+}
+
+.footer .footer_top .ft {
+    width: 220px;
+    height: 250px;
+    float: left;
+    margin-left: 25px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.footer .footer_top .ft img {
+    width: 150px;
+    height: 150px;
+    margin-top: 10px;
+    opacity: 0.5;
+}
+
+.footer .footer_top .ft p {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #8c8c8c;
+}
+
+.footer .footer_top .ft .er {
+    width: 200px;
+    height: 200px;
+    opacity: 1;
+}
+
+.footer .footer_bottom {
+    width: 300px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 50px;
+    color: #8c8c8c;
+}
+
+.footer .footer_bottom hr {
+    border-color: #8c8c8c;
+}
+/* 新闻列表 */
+
+.newslist .new {
+    width: 200px;
+    float: left;
+    margin-left: 80px;
+    margin-bottom: 20px;
+    list-style: none;
+}
+
+.newslist .new img {
+    width: 200px;
+    height: 200px;
+}
+
+.newslist .new span {
+    font-size: 15px;
+    color: black;
+}
+
+.newslist .new p {
+    font-size: 12px;
+    text-indent: 2em;
+    color: #8c8c8c;
+}
+
+.newslist .new a {
+    display: block;
+    width: 100%;
+    height: 300px;
+    text-decoration: none;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.newslist .new a:hover {
+    border: 0.4px solid #8c8c8c;
+    opacity: 0.8;
 }
